# embed_pubmed

./: .gitignore  LICENSE  README.md  pmids.txt  pubmed_sentence_embeddings.ipynb  pyproject.toml
