[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pubmed_embedding_project"
version = "0.1.0"
description = "A project to embed PubMed abstracts and sentences with their PMIDs"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"
keywords = ["PubMed", "embeddings", "sentence-transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "nltk",
    "sentence-transformers",
    "tqdm",
    "numpy"
]

[project.scripts]
download_pubmed = "pubmed_embedding_project:download_pubmed_baseline"
extract_abstracts = "pubmed_embedding_project:extract_abstracts_and_pmids"

[tool.setuptools.package-data]
pubmed_embedding_project = ["*.ipynb"]
